--- a/views/about.pug
+++ b/views/about.pug
@@ -14,9 +14,15 @@ block content
 
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | I am a FullStack JavaScript developer with a passion for games and statistics.
+            br  
+            | Discovered my interest in programming after signing up and completing the "Introduction to Computer Science and Programming Using Python" course which was offered  by MIT via the 
+            a(href="https://www.edx.org/course/introduction-to-computer-science-and-programming-7" target="_blank") edX 
+            | platform.
+            br
+            | Now I am enrolled and working on finishing the Fullstack Javascript Techdegree at 
+            a(href="https://teamtreehouse.com/about" target="_blank") Treehouse.
+            | 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
