--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,7 @@ html(class="no-js" lang="en" dir="ltr")
             h5 Robert Muraru
 
             p.text-light
-              | This Portfolio is all about the work I have accomplished and how I am the most amazing web developer that you should most definitely hire immediately.
+              | Full Stack JavaScript developer with some experience in R and Python.
 
             a(href='/about') Learn More →
 
