--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
       h1 My Portfolio
 
       p.lead.text-light
-        | Portfolio Description
+        | A collection of projects I built.
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
