Updated CSS and screenshots

--- a/views/about.pug
+++ b/views/about.pug
@@ -16,11 +16,11 @@ block content
           p
             | I am a FullStack JavaScript developer with a passion for games and statistics.
             br  
-            | Discovered my interest in programming after signing up and completing the "Introduction to Computer Science and Programming Using Python" course which was offered  by MIT via the 
+            | Discovered my interest in programming after completing the "Introduction to Computer Science and Programming Using Python" course, which was offered  by MIT via the 
             a(href="https://www.edx.org/course/introduction-to-computer-science-and-programming-7" target="_blank") edX 
             | platform.
             br
-            | Now I am enrolled and working on finishing the Fullstack Javascript Techdegree at 
+            | At the moment, I am enrolled in and working on finishing the Fullstack Javascript Techdegree at 
             a(href="https://teamtreehouse.com/about" target="_blank") Treehouse.
             | 
       .cell.portfolio-meta.small-6.medium-2.large-3
