--- a/views/about.pug
+++ b/views/about.pug
@@ -38,7 +38,7 @@ block content
         h6 Contact Info
 
         ul
-          li +40 752 000 000
+          li +40 752 XXX XXX
           li murarurobertionut@yahoo.ro
 
         a.button.expanded(href='https://www.linkedin.com/in/robert-muraru/' target="_blank") LinkedIn
