--- a/views/about.pug
+++ b/views/about.pug
@@ -20,9 +20,15 @@ block content
             a(href="https://www.edx.org/course/introduction-to-computer-science-and-programming-7" target="_blank") edX 
             | platform.
             br
-            | At the moment, I am enrolled in and working on finishing the Fullstack Javascript Techdegree at 
+            | I have completed the Fullstack Javascript Techdegree at 
             a(href="https://teamtreehouse.com/about" target="_blank") Treehouse.
             | 
+            br
+            | Currently I am working on finishing the course: "NodeJS - The Complete Guide (MVC, REST APIs, GraphQL, Deno)" on
+            a(href="https://www.udemy.com/course/nodejs-the-complete-guide" target="_blank") Udemy.
+            |
+            br
+            | For the future I plan on studying more on the front-end technologies such as: CSS, Bootstrap & React
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
