--- a/views/about.pug
+++ b/views/about.pug
@@ -20,7 +20,7 @@ block content
             a(href="https://www.edx.org/course/introduction-to-computer-science-and-programming-7" target="_blank") edX 
             | platform.
             br
-            | I have completed the Fullstack Javascript Techdegree at 
+            | I have completed the "Fullstack Javascript Techdegree" at 
             a(href="https://teamtreehouse.com/about" target="_blank") Treehouse.
             | 
             br
